Test Sandbox Project/src/objects/Training_Plan_Access_Request__c.object
<CustomObject>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Training Plan</label>
        <referenceTo>Training_Plan__c</referenceTo>
        <relationshipLabel>Training Plan Access Requests</relationshipLabel>
        <relationshipName>Training_Plan_Access_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Plan_Access_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Training Plan Access Request</label>
    <nameField>
        <displayFormat>TPAR-{0000000}</displayFormat>
        <label>Training Plan Access Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Plan Access Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>